<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">






        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_20">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_20"
                    android:text="@string/nameverifier"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_15" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_20"
                    android:layout_toLeftOf="@+id/tv_unit_"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_15" />

                <TextView

                    android:layout_alignParentRight="true"
                    android:id="@+id/tv_unit_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:background="@drawable/frame_bg"
                    android:drawableEnd="@drawable/arrow"
                    android:drawablePadding="@dimen/dp_6"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_3"
                    android:paddingRight="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_3"
                    android:text="@string/unit"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_15" />


            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/Description"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />


            <RelativeLayout
                android:layout_width="@dimen/dp_300"
                android:layout_height="@dimen/dp_80"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/remark">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="请输入内容"
                    android:padding="@dimen/dp_4"
                    android:textSize="@dimen/sp_14" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/shoot"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20">

                <ImageView
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="@dimen/dp_80"
                    android:background="@color/black" />

                <ImageView
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="@dimen/dp_80"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:background="@color/colorAccent" />

                <ImageView
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="@dimen/dp_80"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:background="@color/colorAccent" />
            </LinearLayout>
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:background="@drawable/save"
                android:gravity="center"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10"
                android:text="@string/save"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_15" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_20"
                android:background="@drawable/save"
                android:gravity="center"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10"
                android:text="@string/upload"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_15" />



        </LinearLayout>

</ScrollView>