<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddressActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50">

        <ImageView
            android:id="@+id/iv_addressback"
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_20"
            android:src="@mipmap/ic_back" />

        <LinearLayout
            android:layout_width="@dimen/dp_180"
            android:layout_height="@dimen/dp_40"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/area_bg"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/event_dark_blue"
                android:gravity="center"
                android:text="@string/address"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_15" />

            <TextView
                android:id="@+id/tv_area"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/addarea"
                android:textColor="@color/event_dark_blue"
                android:textSize="@dimen/sp_15" />
        </LinearLayout>
























        <TextView
            android:id="@+id/tv_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_20"
            android:text="@string/sure"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20"
            android:visibility="gone" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_5"
        android:background="@color/icon_hui" />

    <TextView
        android:id="@+id/tv_shi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        android:text="@string/selectcity"
        android:textColor="@color/black" />
    <TextView
        android:id="@+id/tv_xian"

        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        android:text="@string/area_"
        android:textColor="@color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_5"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@color/icon_hui" />

  <!--  <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rlv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dp_10" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rlv_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dp_10"
        android:visibility="gone" />-->

    <ExpandableListView
        android:groupIndicator="@null"
        android:id="@+id/exlist_lol"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:childDivider="#DDDDDD"/>



</LinearLayout>